--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,6 +1,11 @@
 body {
     background-color: seagreen;
 }
+h1 {
+    text-decoration-color: black;
+    text-decoration-style: double;
+    text-decoration-line: underline;
+}
 h2, h3 {
     position: relative; 
     margin: 10px;
@@ -38,5 +43,5 @@ menu {
 
 .colorPicker{
     visibility: collapse;
-    
+
 }
