--- a/Styles/life.css
+++ b/Styles/life.css
@@ -1,8 +1,21 @@
+body {
+    display:flex;
+}
 canvas{
-    width: 900px;
+    width: 700px;
     height: 700px;
     border-radius: 2px;
     border-color: black;
     border-width: 2px;
     border-style: solid;
+}
+.numberDiv{
+    border-radius: 2px;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    width: 20%;
+}
+.numberDiv > * {
+    margin: 0%;
 }
