--- a/Styles/life.css
+++ b/Styles/life.css
@@ -2,8 +2,8 @@ body {
     display:flex;
 }
 .lifeCanvas{
-     /* width: 500px;
-    height: 500px;  */
+     width: 500px;
+    height: 500px; 
     border-radius: 2px;
     border-color: black;
     border-width: 2px;
